- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P3: Somewhat important
 - 
    6.6
 - 
    None
 
- 
        1a737fddd (dev), b17d75cd6 (6.7), 3a92c53b7 (6.6), c1fa7cb39 (tqtc/lts-6.5)
 
doc : https://doc.qt.io/QtInterfaceFramework/qml-ifsimulator.html#methods
The methods in the documentation don't specify the return types.
whereas usually the return types are specified in the QML types' documentations.
Example : https://doc.qt.io/qt-6/qml-qtquick-controls-combobox.html#find-method
| For Gerrit Dashboard: QTBUG-121800 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 538069,3 | doc: Add missing return types in IfSimulator QML methods documentation | 6.7 | qt/qtinterfaceframework | Status: MERGED | +2 | 0 | 
| 538087,3 | doc: Add missing return types in IfSimulator QML methods documentation | dev | qt/qtinterfaceframework | Status: MERGED | +2 | 0 | 
| 538201,2 | doc: Add missing return types in IfSimulator QML methods documentation | 6.6 | qt/qtinterfaceframework | Status: MERGED | +2 | 0 | 
| 538319,2 | doc: Add missing return types in IfSimulator QML methods documentation | tqtc/lts-6.5 | qt/tqtc-qtinterfaceframework | Status: MERGED | +2 | 0 |