doc: Add missing return types in IfSimulator QML methods documentation

Fixes: QTBUG-121800
Pick-to: 6.7 6.6 6.5
Change-Id: I81325b61d9436393fbb21b56d97e167b48d552fa
Reviewed-by: Robert Griebl <robert.griebl@qt.io>